inserting bearer header into documentation
